added logo and image

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>KnowItAll</title>
+    <title>Wise Owl</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,8 +15,8 @@
     <main>
       <section class="chatbot-container">
         <div class="chatbot-header">
-          <img src="images/owl-logo.png" class="logo" />
-          <h1>KnowItAll</h1>
+          <img src="owl-logo.png" class="logo" />
+          <h1>Wise Owl</h1>
           <h2>Ask me anything!</h2>
           <p class="supportId">User ID: 2344</p>
         </div>
@@ -26,7 +26,7 @@
         <form id="form" class="chatbot-input-container">
           <input name="user-input" type="text" id="user-input" required />
           <button id="submit-btn" class="submit-btn">
-            <img src="images/send-btn-icon.png" class="send-btn-icon" />
+            <img src="send-btn-icon.png" class="send-btn-icon" />
           </button>
         </form>
       </section>
