addedn new dependency firebase

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
 
   <body>
@@ -18,7 +22,8 @@
           <img src="owl-logo.png" class="logo" />
           <h1>Wise Owl</h1>
           <h2>Ask me anything!</h2>
-          <p class="supportId">User ID: 2344</p>
+          <p class="supportId">User ID: 1202</p>
+          <button class="clear-btn" id="clear-btn">start over</button>
         </div>
         <div class="chatbot-conversation-container" id="chatbot-conversation">
           <div class="speech speech-ai">How can I help you?</div>
